# plotnik

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  drawing.py  global_drawing.py  processes.py  pyproject.toml
.github/workflows/: build-documentation.yml  pre-commit-ci.yml  smoke-test.yml  testing.yml
docs/: conf.py  index.rst
src/plotnik/: __init__.py  drawing.py  global_drawing.py  processes.py
tests/plotnik/: test_plotnik.py
